[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MenuButtons.gd" type="Script" id=1]
[ext_resource path="res://fonts/GUI_60.tres" type="DynamicFont" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_top = 735.0
margin_right = 576.0
margin_bottom = 801.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
margin_top = 223.0
margin_right = 576.0
margin_bottom = 289.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Back" to="." method="back_pressed"]
[connection signal="pressed" from="Restart" to="." method="start_pressed"]
