[gd_scene load_steps=8 format=3 uid="uid://c303d0eubqil1"]

[ext_resource type="Script" uid="uid://c1u6hb0b3nscy" path="res://scripts/MenuButtons.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cvysbiubrkpfa" path="res://fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="3"]
[ext_resource type="FontFile" path="res://fonts/GUI_60.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://b26nan6i3i8po" path="res://scenes/Background.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://81x1mmmcht5j" path="res://scenes/SettingsMenu.tscn" id="5_b6cxs"]

[sub_resource type="GDScript" id="GDScript_jmdev"]
script/source = "extends Node2D

#func _ready():
	#get_viewport().size.x = Global.width
"

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0

[node name="Menu" type="Node2D"]
script = SubResource("GDScript_jmdev")

[node name="Background" parent="." instance=ExtResource("5")]

[node name="UI" type="Node2D" parent="."]

[node name="Title" type="Label" parent="UI"]
offset_right = 576.0
offset_bottom = 256.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 80
text = "Blocks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="Node2D" parent="UI"]
script = ExtResource("1")
settings_scene = ExtResource("5_b6cxs")

[node name="Start" type="Button" parent="UI/MenuButtons"]
offset_top = 360.0
offset_right = 580.0
offset_bottom = 460.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Start"
flat = true

[node name="Settings" type="Button" parent="UI/MenuButtons"]
offset_top = 460.0
offset_right = 580.0
offset_bottom = 560.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Settings"
flat = true

[node name="High Scores" type="Button" parent="UI/MenuButtons"]
offset_top = 560.0
offset_right = 580.0
offset_bottom = 660.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "High Scores"
flat = true

[node name="Quit" type="Button" parent="UI/MenuButtons"]
offset_top = 919.0
offset_right = 580.0
offset_bottom = 1019.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Quit"
flat = true

[connection signal="pressed" from="UI/MenuButtons/Start" to="UI/MenuButtons" method="start_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Settings" to="UI/MenuButtons" method="settings_pressed"]
[connection signal="pressed" from="UI/MenuButtons/High Scores" to="UI/MenuButtons" method="highscores_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Quit" to="UI/MenuButtons" method="quit_pressed"]
